[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/CustomSpinBox.gd" type="Script" id=1]
[ext_resource path="res://Scenes/ClmControls.gd" type="Script" id=2]
[ext_resource path="res://Theme/RemoveSpinBoxArrows.png" type="Texture" id=3]

[sub_resource type="Theme" id=1]
SpinBox/icons/updown = ExtResource( 3 )

[node name="ClmControls" type="PanelContainer"]
margin_right = 220.0
margin_bottom = 624.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 213.0
margin_bottom = 617.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 206.0
margin_bottom = 610.0
size_flags_horizontal = 11
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_right = 206.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 92.0
margin_bottom = 19.0
text = "Column index:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColumnIndexSpinBox" type="SpinBox" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 96.0
margin_right = 170.0
margin_bottom = 24.0
max_value = 2047.0
rounded = true
script = ExtResource( 1 )

[node name="GridContainer" type="GridContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 206.0
margin_bottom = 72.0
columns = 2

[node name="ColumnCopyButton" type="Button" parent="ScrollContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
margin_right = 101.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Copy"

[node name="ColumnPasteButton" type="Button" parent="ScrollContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
margin_left = 105.0
margin_right = 206.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Paste"

[node name="ColumnFirstUnusedButton" type="Button" parent="ScrollContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
margin_top = 24.0
margin_right = 101.0
margin_bottom = 44.0
text = "Go to unused"

[node name="ColumnRevertButton" type="Button" parent="ScrollContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
margin_left = 105.0
margin_top = 24.0
margin_right = 206.0
margin_bottom = 44.0
size_flags_horizontal = 3
text = "Revert"

[node name="GridSimpleValues" type="GridContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 206.0
margin_bottom = 324.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label8" type="Label" parent="ScrollContainer/VBoxContainer/GridSimpleValues"]
margin_top = 5.0
margin_right = 82.0
margin_bottom = 19.0
text = "Cube 8"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cube8SpinBox" type="SpinBox" parent="ScrollContainer/VBoxContainer/GridSimpleValues"]
unique_name_in_owner = true
margin_left = 132.0
margin_right = 206.0
margin_bottom = 24.0
hint_tooltip = "Top cube"
size_flags_horizontal = 10
max_value = 1e+09
script = ExtResource( 1 )

[node name="Label9" type="Label" parent="ScrollContainer/VBoxContainer/GridSimpleValues"]
margin_top = 33.0
margin_right = 82.0
margin_bottom = 47.0
text = "Cube 7"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cube7SpinBox" type="SpinBox" parent="ScrollContainer/VBoxContainer/GridSimpleValues"]
unique_name_in_owner = true
margin_left = 132.0
margin_top = 28.0
margin_right = 206.0
margin_bottom = 52.0
size_flags_horizontal = 10
max_value = 1e+09
script = ExtResource( 1 )

[node name="Label10" type="Label" parent="ScrollContainer/VBoxContainer/GridSimpleValues"]
margin_top = 61.0
margin_right = 82.0
margin_bottom = 75.0
text = "Cube 6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cube6SpinBox" type="SpinBox" parent="ScrollContainer/VBoxContainer/GridSimpleValues"]
unique_name_in_owner = true
margin_left = 132.0
margin_top = 56.0
margin_right = 206.0
margin_bottom = 80.0
size_flags_horizontal = 10
max_value = 1e+09
script = ExtResource( 1 )

[node name="Label11" type="Label" parent="ScrollContainer/VBoxContainer/GridSimpleValues"]
margin_top = 89.0
margin_right = 82.0
margin_bottom = 103.0
text = "Cube 5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cube5SpinBox" type="SpinBox" parent="ScrollContainer/VBoxContainer/GridSimpleValues"]
unique_name_in_owner = true
margin_left = 132.0
margin_top = 84.0
margin_right = 206.0
margin_bottom = 108.0
size_flags_horizontal = 10
max_value = 1e+09
script = ExtResource( 1 )

[node name="Label12" type="Label" parent="ScrollContainer/VBoxContainer/GridSimpleValues"]
margin_top = 117.0
margin_right = 82.0
margin_bottom = 131.0
text = "Cube 4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cube4SpinBox" type="SpinBox" parent="ScrollContainer/VBoxContainer/GridSimpleValues"]
unique_name_in_owner = true
margin_left = 132.0
margin_top = 112.0
margin_right = 206.0
margin_bottom = 136.0
size_flags_horizontal = 10
max_value = 1e+09
script = ExtResource( 1 )

[node name="Label13" type="Label" parent="ScrollContainer/VBoxContainer/GridSimpleValues"]
margin_top = 145.0
margin_right = 82.0
margin_bottom = 159.0
text = "Cube 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cube3SpinBox" type="SpinBox" parent="ScrollContainer/VBoxContainer/GridSimpleValues"]
unique_name_in_owner = true
margin_left = 132.0
margin_top = 140.0
margin_right = 206.0
margin_bottom = 164.0
size_flags_horizontal = 10
max_value = 1e+09
script = ExtResource( 1 )

[node name="Label14" type="Label" parent="ScrollContainer/VBoxContainer/GridSimpleValues"]
margin_top = 173.0
margin_right = 82.0
margin_bottom = 187.0
text = "Cube 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cube2SpinBox" type="SpinBox" parent="ScrollContainer/VBoxContainer/GridSimpleValues"]
unique_name_in_owner = true
margin_left = 132.0
margin_top = 168.0
margin_right = 206.0
margin_bottom = 192.0
size_flags_horizontal = 10
max_value = 1e+09
script = ExtResource( 1 )

[node name="Label15" type="Label" parent="ScrollContainer/VBoxContainer/GridSimpleValues"]
margin_top = 201.0
margin_right = 82.0
margin_bottom = 215.0
text = "Cube 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cube1SpinBox" type="SpinBox" parent="ScrollContainer/VBoxContainer/GridSimpleValues"]
unique_name_in_owner = true
margin_left = 132.0
margin_top = 196.0
margin_right = 206.0
margin_bottom = 220.0
hint_tooltip = "Bottom cube"
size_flags_horizontal = 10
max_value = 1e+09
script = ExtResource( 1 )

[node name="Label6" type="Label" parent="ScrollContainer/VBoxContainer/GridSimpleValues"]
margin_top = 229.0
margin_right = 82.0
margin_bottom = 243.0
text = "Floor texture"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FloorTextureSpinBox" type="SpinBox" parent="ScrollContainer/VBoxContainer/GridSimpleValues"]
unique_name_in_owner = true
margin_left = 132.0
margin_top = 224.0
margin_right = 206.0
margin_bottom = 248.0
hint_tooltip = "This is the flat texture which is below even the bottom cube"
size_flags_horizontal = 10
max_value = 1e+09
script = ExtResource( 1 )

[node name="CheckboxShowAll" type="CheckBox" parent="ScrollContainer/VBoxContainer"]
margin_top = 328.0
margin_right = 206.0
margin_bottom = 352.0
rect_min_size = Vector2( 24, 24 )
text = "Advanced"

[node name="GridAdvancedValues" type="GridContainer" parent="ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 356.0
margin_right = 206.0
margin_bottom = 528.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="ScrollContainer/VBoxContainer/GridAdvancedValues"]
margin_top = 5.0
margin_right = 86.0
margin_bottom = 19.0
text = "Height *"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeightSpinBox" type="SpinBox" parent="ScrollContainer/VBoxContainer/GridAdvancedValues"]
unique_name_in_owner = true
margin_left = 132.0
margin_right = 206.0
margin_bottom = 24.0
hint_tooltip = "Height is set to the position of highest cube for this column."
size_flags_horizontal = 10
max_value = 99999.0
script = ExtResource( 1 )

[node name="Label7" type="Label" parent="ScrollContainer/VBoxContainer/GridAdvancedValues"]
margin_top = 33.0
margin_right = 86.0
margin_bottom = 47.0
text = "Solid mask *"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SolidMaskSpinBox" type="SpinBox" parent="ScrollContainer/VBoxContainer/GridAdvancedValues"]
unique_name_in_owner = true
margin_left = 132.0
margin_top = 28.0
margin_right = 206.0
margin_bottom = 52.0
hint_tooltip = "Needs more info."
size_flags_horizontal = 10
max_value = 99999.0
script = ExtResource( 1 )

[node name="Label3" type="Label" parent="ScrollContainer/VBoxContainer/GridAdvancedValues"]
margin_top = 61.0
margin_right = 86.0
margin_bottom = 75.0
text = "Permanent"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PermanentSpinBox" type="SpinBox" parent="ScrollContainer/VBoxContainer/GridAdvancedValues"]
unique_name_in_owner = true
margin_left = 132.0
margin_top = 56.0
margin_right = 206.0
margin_bottom = 80.0
hint_tooltip = "Non-permanent columns are recycled when their Utilized drops to zero."
size_flags_horizontal = 10
max_value = 99999.0
script = ExtResource( 1 )

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/GridAdvancedValues"]
visible = false
margin_top = 89.0
margin_right = 73.0
margin_bottom = 103.0
text = "Orientation"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OrientationSpinBox" type="SpinBox" parent="ScrollContainer/VBoxContainer/GridAdvancedValues"]
unique_name_in_owner = true
visible = false
margin_left = 132.0
margin_top = 84.0
margin_right = 206.0
margin_bottom = 108.0
hint_tooltip = "Unused"
size_flags_horizontal = 10
max_value = 99999.0
script = ExtResource( 1 )

[node name="Label4" type="Label" parent="ScrollContainer/VBoxContainer/GridAdvancedValues"]
margin_top = 89.0
margin_right = 86.0
margin_bottom = 103.0
text = "Lintel *"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LintelSpinBox" type="SpinBox" parent="ScrollContainer/VBoxContainer/GridAdvancedValues"]
unique_name_in_owner = true
margin_left = 132.0
margin_top = 84.0
margin_right = 206.0
margin_bottom = 108.0
hint_tooltip = "This should affect how  columns are attached to the ceiling, but it may be non-functional. Needs more info."
size_flags_horizontal = 10
max_value = 99999.0
script = ExtResource( 1 )

[node name="Label16" type="Label" parent="ScrollContainer/VBoxContainer/GridAdvancedValues"]
margin_top = 117.0
margin_right = 86.0
margin_bottom = 131.0
text = "Utilized"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UtilizedSpinBox" type="SpinBox" parent="ScrollContainer/VBoxContainer/GridAdvancedValues"]
unique_name_in_owner = true
margin_left = 132.0
margin_top = 112.0
margin_right = 206.0
margin_bottom = 136.0
hint_tooltip = "This is how many times this column appears on the map."
size_flags_horizontal = 10
theme = SubResource( 1 )
max_value = 99999.0
editable = false
script = ExtResource( 1 )

[node name="Label6" type="Label" parent="ScrollContainer/VBoxContainer/GridAdvancedValues"]
margin_top = 140.0
margin_right = 86.0
margin_bottom = 154.0

[node name="Label8" type="Label" parent="ScrollContainer/VBoxContainer/GridAdvancedValues"]
margin_left = 90.0
margin_top = 140.0
margin_right = 206.0
margin_bottom = 154.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/GridAdvancedValues"]
margin_top = 158.0
margin_right = 86.0
margin_bottom = 172.0
text = "(* Automatic)"

[connection signal="value_changed" from="ScrollContainer/VBoxContainer/HBoxContainer/ColumnIndexSpinBox" to="." method="_on_ColumnIndexSpinBox_value_changed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/GridContainer/ColumnCopyButton" to="." method="_on_ColumnCopyButton_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/GridContainer/ColumnPasteButton" to="." method="_on_ColumnPasteButton_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/GridContainer/ColumnFirstUnusedButton" to="." method="_on_ColumnFirstUnusedButton_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/GridContainer/ColumnRevertButton" to="." method="_on_ColumnRevertButton_pressed"]
[connection signal="value_changed" from="ScrollContainer/VBoxContainer/GridSimpleValues/FloorTextureSpinBox" to="." method="_on_FloorTextureSpinBox_value_changed"]
[connection signal="toggled" from="ScrollContainer/VBoxContainer/CheckboxShowAll" to="." method="_on_CheckboxShowAll_toggled"]
[connection signal="value_changed" from="ScrollContainer/VBoxContainer/GridAdvancedValues/HeightSpinBox" to="." method="_on_HeightSpinBox_value_changed"]
[connection signal="value_changed" from="ScrollContainer/VBoxContainer/GridAdvancedValues/SolidMaskSpinBox" to="." method="_on_SolidMaskSpinBox_value_changed"]
[connection signal="value_changed" from="ScrollContainer/VBoxContainer/GridAdvancedValues/PermanentSpinBox" to="." method="_on_PermanentSpinBox_value_changed"]
[connection signal="value_changed" from="ScrollContainer/VBoxContainer/GridAdvancedValues/OrientationSpinBox" to="." method="_on_OrientationSpinBox_value_changed"]
[connection signal="value_changed" from="ScrollContainer/VBoxContainer/GridAdvancedValues/LintelSpinBox" to="." method="_on_LintelSpinBox_value_changed"]
[connection signal="value_changed" from="ScrollContainer/VBoxContainer/GridAdvancedValues/UtilizedSpinBox" to="." method="_on_UtilizedSpinBox_value_changed"]
